<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        />
    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        />
    <Button
        android:id="@+id/button_intent_2nd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2nd_activity"
        />
    <Button
        android:id="@+id/button_intent_implicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_implicit"
        />
    <Button
        android:id="@+id/button_of_ImpInt_to_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_implicit_to_baidu"
        />
    <Button
        android:id="@+id/button_of_ImpInt_of_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_response_for_net"
        />
    <Button
        android:id="@+id/button_of_ImpInt_of_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_response_for_dial"
        />
    <Button
    android:id="@+id/button_of_Int_passdata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/intent_pass_data"
    />
    <Button
    android:id="@+id/button_of_Int_return_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/_3rd_activity_return_data_to_1st"
    />
</LinearLayout>